update for next usergroupmeeting

--- a/history.html
+++ b/history.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="container">
-      <h1>Treffen im Rückblick</h1>
+      <h1>2013 Treffen im Rückblick</h1>
       <table class="table table-striped">
         <thead>
           <tr>
@@ -57,7 +57,7 @@
         </thead>
         <tr>
           <td colspan="3">
-            Unser erstes Treffen steht noch an... :-)
+            Unser erstes Treffen in 2013 steht noch an... :-)
           </td>
 
       </table>
@@ -65,7 +65,7 @@
       <hr/>
 
       <footer>
-        <p>&copy; 2012 Ruby User Group Bamberg</p>
+        <p>&copy; 2013 Ruby User Group Bamberg</p>
       </footer>
 
     </div> <!-- /container -->
