--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
             <ul class="nav">
               <li class="active"><a href="http://rug-ba.de/">Home</a></li>
               <li><a href="https://groups.google.com/group/rug-ba">Google Group</a></li>
-              <li><a href="https://github.com/rug-ba/rug-ba/wiki">Wiki</a></li>
               <li><a href="https://twitter.com/rugba2">Twitter</a></li>
               <li><a href="https://github.com/rug-ba">GitHub</a></li>
             </ul>
@@ -46,7 +45,7 @@
     </div>
 
    <div class="container">
-      <img src="ruby-icon.png" style="float: right;"/>
+      <img src="ruby-icon.png" style="float: right;" alt="rubyicon"/>
 
       <!-- Main hero unit for a primary marketing message or call to action -->
       <div class="hero-unit">
@@ -54,15 +53,16 @@
         <p>Im Mittelpunkt der Ruby User Group Bamberg steht der Austausch
         von Erfahrungen mit der Programmiersprache <a href="http://ruby-lang.org/de/">Ruby</a>.
         Neben den monatlichen Treffen, dient dazu unsere Google Group.</p>
-        <p><a class="btn btn-primary btn-large" href="https://groups.google.com/group/rug-n">Sei dabei &raquo;</a></p>
+        <p><a class="btn btn-primary btn-large" href="https://groups.google.com/group/rug-ba">Sei dabei &raquo;</a></p>
       </div>
 
       <div class="row">
-        <div class="span1">&nbsp</div>
+        <div class="span1">&nbsp;</div>
         <div class="span6">
           <h2>Nächstes Treffen</h2>
           <p>
-            Das nächste Treffen findet im September statt. Aktuell sind wir noch in der Terminfindung für einen festen monatlichen Termin. Vorschläge dafür können in der Google Group gemacht werden.
+          Das nächste Treffen findet am 9. Januar 2012 im Bürgerhaus in Litzendorf ab 19:00 statt. <br />
+          Die genaue Adresse ist: Bürgerhaus, Am Wehr, 96123 Litzendorf
           </p>
           <p><a class="btn" href="history.html">Alte Treffen im Rückblick &raquo;</a></p>
         </div>
@@ -75,13 +75,13 @@
              <a class="btn" href="http://twitter.com/rugba2">Folge uns auf Twitter &raquo;</a>
           </p>
         </div>
-        <div class="span1">&nbsp</div>
+        <div class="span1">&nbsp;</div>
       </div>
 
       <hr/>
 
       <footer>
-        <p>&copy; 2012 Ruby User Group Bamberg</p>
+        <p>&copy; 2013 Ruby User Group Bamberg</p>
       </footer>
 
     </div> <!-- /container -->
