updated for new meetup

--- a/history.html
+++ b/history.html
@@ -56,10 +56,9 @@
           </tr>
         </thead>
         <tr>
-          <td colspan="3">
-            Unser erstes Treffen in 2013 steht noch an... :-)
-          </td>
-
+          <td>09.01.2013</td>
+          <td>Ruby als moderne Programmiersprache</td>
+          <td>Bürgerhaus Litzendorf</td>
       </table>
 
       <hr/>
