--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
         <div class="span6">
           <h2>Nächstes Treffen</h2>
           <p>
-          Das nächste Treffen findet am 9. Januar 2012 im Bürgerhaus in Litzendorf ab 19:00 statt. <br />
-          Die genaue Adresse ist: Bürgerhaus, Am Wehr, 96123 Litzendorf
+          Das nächste Treffen findet am 13. Februar 2012 im Bürgerhaus in Litzendorf ab 19:00 statt. <br />
+          Die genaue Adresse ist: Bürgerhaus, Am Wehr, 96123 Litzendorf<br /><br />
+          Über <a href="http://www.meetup.com/Ruby-User-Group-Bamberg">Meetup.com</a> könnt ihr uns übrigens mitteilen, ob ihr beim nächsten Treffen dabei seit.
+          Das erleichtert uns die Planung der Veranstaltung ...
           </p>
           <p><a class="btn" href="history.html">Alte Treffen im Rückblick &raquo;</a></p>
         </div>
