adjust for march

--- a/history.html
+++ b/history.html
@@ -59,6 +59,17 @@
           <td>09.01.2013</td>
           <td>Ruby als moderne Programmiersprache</td>
           <td>Bürgerhaus Litzendorf</td>
+        </tr>
+        <tr>
+          <td>13.02.2013</td>
+          <td>Rails &amp; Ruby </td>
+          <td>Bürgerhaus Litzendorf</td>
+        </tr>
+        <tr>
+          <td>13.03.2013</td>
+          <td>More Rails &amp; Ruby </td>
+          <td>Bürgerhaus Litzendorf</td>
+        </tr>
       </table>
 
       <hr/>
