--- a/history.html
+++ b/history.html
@@ -67,7 +67,7 @@
         </tr>
         <tr>
           <td>13.03.2013</td>
-          <td>More Rails &amp; Ruby </td>
+          <td>Mehr Rails &amp; Ruby: Active Record und Migrationen</td>
           <td>Bürgerhaus Litzendorf</td>
         </tr>
       </table>
