adjusted date for next meetup

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="span6">
           <h2>Nächstes Treffen</h2>
           <p>
-          Das nächste Treffen findet am 13. März 2013 im Bürgerhaus in Litzendorf ab 19:00 statt. <br />
+          Das nächste Treffen findet am 10. April 2013 im Bürgerhaus in Litzendorf ab 19:00 statt. <br />
           Thema: Mehr Rails &amp; Ruby - Controller und Views <br />
           Die genaue Adresse ist: Bürgerhaus, Am Wehr, 96123 Litzendorf<br /><br />
           Über <a href="http://www.meetup.com/Ruby-User-Group-Bamberg">Meetup.com</a> könnt ihr uns übrigens mitteilen, ob ihr beim nächsten Treffen dabei seit.
