update for next user group meeting

--- a/history.html
+++ b/history.html
@@ -55,6 +55,11 @@
           </tr>
         </thead>
         <tr>
+          <td>10.04.2013</td>
+          <td>Mehr Rails &amp; Ruby: Controller, Views & Routing</td>
+          <td>Bürgerhaus Litzendorf</td>
+        </tr>
+        <tr>
           <td>13.03.2013</td>
           <td>Mehr Rails &amp; Ruby: Active Record und Migrationen</td>
           <td>Bürgerhaus Litzendorf</td>
