--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="span6">
           <h2>Nächstes Treffen</h2>
           <p>
-          Das nächste Treffen findet am 8. Mai 2013 beim Baur Versand GmbH ab 19:00 statt. <br />Bitte das eigene Kommen über Meetup bekannt machen, damit Besucherausweise erstellt werden können.<br />
-          Thema: Mehr Rails &amp; Ruby - Controller und Views <br />
+          Das nächste Treffen findet am 8. Mai 2013 beim der Baur Versand GmbH ab 19:00 statt. <br />Bitte das eigene Kommen über Meetup bekannt machen, damit Besucherausweise erstellt werden können.<br />
+          Thema: Mehr Rails &amp; Ruby - Controller und Views <br /><br />
           Die genaue Adresse ist: Michael-Dechant-Straße 10, 96260 Weismain<br /><br />
           Über <a href="http://www.meetup.com/Ruby-User-Group-Bamberg">Meetup.com</a> könnt ihr uns übrigens mitteilen, ob ihr beim nächsten Treffen dabei seit.
           Das erleichtert uns die Planung der Veranstaltung ...
