--- a/history.html
+++ b/history.html
@@ -55,6 +55,11 @@
           </tr>
         </thead>
         <tr>
+          <td>08.05.2013</td>
+          <td>Mehr Rails &amp; Ruby: Vertiefung Active Record Assoziationen</td>
+          <td>Baur Versand GmbH</td>
+        </tr>
+        <tr>
           <td>10.04.2013</td>
           <td>Mehr Rails &amp; Ruby: Controller, Views & Routing</td>
           <td>Bürgerhaus Litzendorf</td>
