update for next usergroup meetup

--- a/history.html
+++ b/history.html
@@ -55,9 +55,14 @@
           </tr>
         </thead>
         <tr>
+          <td>12.06.2013</td>
+          <td>Mehr Rails &amp; Ruby: Vertiefung Controller und Views</td>
+          <td>Baur Versand GmbH</td>
+        </tr>
+        <tr>
           <td>08.05.2013</td>
           <td>Mehr Rails &amp; Ruby: Vertiefung Active Record Assoziationen</td>
-          <td>Baur Versand GmbH</td>
+          <td>Bürgerhaus Litzendorf</td>
         </tr>
         <tr>
           <td>10.04.2013</td>
