--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <div class="span6">
           <h2>Nächstes Treffen</h2>
           <p>
-          Das nächste Treffen findet am 12. Juni 2013 im Bürgerhaus Litzendorf ab 19:00 statt. <br />Bitte das eigene Kommen über Meetup bekannt machen, damit Besucherausweise erstellt werden können.<br />
-          Thema: Mehr Rails &amp; Ruby - Vertiefung Controller und Views <br /><br />
+          Das nächste Treffen findet am 14. August 2013 im Bürgerhaus Litzendorf ab 19:00 statt. <br />Bitte das eigene Kommen über Meetup bekannt machen, damit Besucherausweise erstellt werden können.<br />
+          Thema: Mehr Rails &amp; Ruby - Views, Javascript &amp; CSS <br /><br />
           Die genaue Adresse ist: Am Wehr, 96123 Litzendorf<br /><br />
           Über <a href="http://www.meetup.com/Ruby-User-Group-Bamberg">Meetup.com</a> könnt ihr uns übrigens mitteilen, ob ihr beim nächsten Treffen dabei seit.
           Das erleichtert uns die Planung der Veranstaltung ...
